--- a/examples/w03-examples/html-forms/client-side-form-validation/built-in-validation/style.css
+++ b/examples/w03-examples/html-forms/client-side-form-validation/built-in-validation/style.css
@@ -1,6 +1,49 @@
+main{
+    width: 60%;
+    margin: 0 auto;
+}
 h1{
     background-color: rgb(201, 214, 224);
     padding: 2%;
     text-align: center;
     border-radius: 5px;
 }
+
+/* The simplest HTML validation feature is the required attribute. 
+To make an input mandatory, add this attribute to the element. 
+When this attribute is set, the element matches the :required UI pseudo-class and the form won't submit, 
+displaying an error message on submission when the input is empty. While empty, the input will also be considered invalid, 
+matching the :invalid UI pseudo-class. */
+input{
+    margin-bottom: 2px;
+    border-radius: 2px;
+}
+button,
+input[type=submit]{
+    width: 10rem;
+    padding: 5px;
+    /* border-radius: 5px; */
+    margin-top: 2%;
+}
+input:invalid {
+    border: 1px solid red;
+}
+
+input:valid {
+    border: 1px solid #0a1a0d;
+}
+
+input:required{
+    background: #e7ede7;
+}
+
+
+input:invalid:required {
+    background-image: linear-gradient(to right, pink, lightgreen);
+}
+
+fieldset{
+    border-radius:5px;
+    padding: 2rem;
+}
+
